--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 <body>
   <h1>Modern Music Player</h1>
   <div class="player-container">
-    <input type="file" id="fileInput" accept="audio/*" hidden />
+    <input type="file" id="fileInput" accept="audio/*,.mp3,.wav,.ogg" hidden />
     <label for="fileInput" id="uploadLabel" class="file-btn">Upload File</label>
     <div id="fileName" class="file-name" style="display: none;"></div>
     <div class="controls">
